<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/persistent_bottom_sheet"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:id="@+id/tv_popular_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/popular"/>

    <TextView
        android:id="@+id/tv_top_rated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/top_rated"/>

    <TextView
        android:id="@+id/tv_now_playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/now_playing"
        android:textSize="16sp"
        android:textColor="@color/black"/>

</LinearLayout>