<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardCornerRadius="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="100dp"
            android:layout_height="120dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/image_item_view" />

        <TextView
            android:id="@+id/tv_title_item"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            tools:text="@string/title_item"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toRightOf="@id/image_item"
            app:layout_constraintTop_toTopOf="@id/image_item"/>

        <RatingBar
            android:id="@+id/rb_item_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/ratingBarStyleSmall"
            android:numStars="5"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_item"
            app:layout_constraintLeft_toLeftOf="@id/tv_title_item"/>

        <TextView
            android:id="@+id/tv_vote_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="votes"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/rb_item_view"
            app:layout_constraintTop_toTopOf="@id/rb_item_view"
            app:layout_constraintBottom_toBottomOf="@id/rb_item_view"/>

        <TextView
            android:id="@+id/tv_date_item"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            tools:text="@string/date_item"
            android:layout_marginTop="3dp"
            android:textSize="12sp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/tv_vote_detail"
            app:layout_constraintLeft_toLeftOf="@id/rb_item_view"/>

        <TextView
            android:id="@+id/tv_desc_item"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            tools:text="@string/description_item"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_date_item"
            app:layout_constraintTop_toBottomOf="@id/tv_date_item"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>