<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_detail"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ct_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">
                <ImageView
                    android:id="@+id/img_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:srcCompat="@tools:sample/avatars"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/image_detail"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <TextView
                    android:id="@+id/tv_title_detail"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    tools:text="@string/title_item"
                    android:textColor="@color/white"
                    android:layout_marginBottom="70dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <RatingBar
                    android:id="@+id/rb_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/ratingBarStyleSmall"
                    android:numStars="5"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_detail"
                    app:layout_constraintStart_toStartOf="@id/tv_title_detail"/>

                <TextView
                    android:id="@+id/tv_vote_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="votes"
                    android:textColor="@color/white"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toEndOf="@id/rb_detail"
                    app:layout_constraintTop_toTopOf="@id/rb_detail"
                    app:layout_constraintBottom_toBottomOf="@id/rb_detail"/>

                <TextView
                    android:id="@+id/tv_date_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/date_item"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@id/rb_detail"
                    app:layout_constraintStart_toStartOf="@id/rb_detail"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:layout_scrollFlags="scroll|enterAlways"
                app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">
            <TextView
                android:id="@+id/tv_title_desc_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_detail"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <ImageView
                android:id="@+id/image_detail_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favorite_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/favorite_button" />
            <TextView
                android:id="@+id/tv_desc_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:text="@string/description_item"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_title_desc_detail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/tv_desc_detail"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/tv_title_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/reviews"
                app:layout_constraintTop_toBottomOf="@id/divider1"
                app:layout_constraintStart_toStartOf="parent"/>
            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/tv_title_review"
                app:layout_constraintStart_toStartOf="parent"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/divider2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>